syntax = "proto3";

package mycompany.accounts.v1;

import "google/protobuf/timestamp.proto";

// Go package option
option go_package = "mycompany/gen/go/accounts/v1;accountsv1";

// Represents the status of an account
enum AccountStatus {
  ACCOUNT_STATUS_UNSPECIFIED = 0;
  ACCOUNT_STATUS_PENDING = 1;
  ACCOUNT_STATUS_ACTIVE = 2;
  ACCOUNT_STATUS_SUSPENDED = 3;
  ACCOUNT_STATUS_CLOSED = 4;
}

// Represents a user account
message Account {
  string account_id = 1; // Unique identifier for the account
  string display_name = 2;
  string email = 3;
  AccountStatus status = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// Request message for getting an account
message GetAccountRequest {
  string account_id = 1; // The ID of the account to retrieve
}

message GetAccountResponse {
  Account account = 1;
}

// Request message for creating an account
message CreateAccountRequest {
  string display_name = 1;
  string email = 2;
  // Initial password or setup mechanism would likely be handled separately
}

message CreateAccountResponse {
  Account account = 1;
}

// Service for managing accounts
service AccountService {
  // Retrieves a specific account
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);

  // Creates a new account
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
}
